--- a/src/styles/Blogdetails.module.css
+++ b/src/styles/Blogdetails.module.css
@@ -1,5 +1,5 @@
 .blogbg{
-    background-color: #141d29;
+    background-color: #02adb54d;
     height: 100vh;
     display: flex;
     align-items: center;
