--- a/src/styles/Error.module.css
+++ b/src/styles/Error.module.css
@@ -1,7 +1,7 @@
 .error{
     padding-top: 230px;
     padding-bottom: 90px;
-    background-color: #24303E;
+    background-color: #02adb54d;
 }
 
 .btn404{
