--- a/src/styles/Illustrativebook.module.css
+++ b/src/styles/Illustrativebook.module.css
@@ -1,5 +1,5 @@
 .plust {
-    background-color: #141D29;
+    background-color: #02adb54d;
     padding-top: 70px;
     padding-bottom: 70px;
     position: relative;
