--- a/src/styles/Partners.module.css
+++ b/src/styles/Partners.module.css
@@ -1,6 +1,10 @@
 .partners{
     padding-top: 35px;
     padding-bottom: 35px;
-    background-color: #141d29;
+    background-color: #02adb54d;
     font-family: 'Montserrat';
+}
+
+.partners img{
+    filter: invert(1);
 }
