--- a/src/styles/Serviceproviders.module.css
+++ b/src/styles/Serviceproviders.module.css
@@ -1,7 +1,7 @@
 .stopworrying {
   padding-top: 100px;
   padding-bottom: 50px;
-  background-color: #141D29;
+  background-color: #02adb54d;
 
 }
 .books {
