--- a/src/styles/Experts.module.css
+++ b/src/styles/Experts.module.css
@@ -1,7 +1,7 @@
 .experts {
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #24303E;
+  background-color: #02adb54d;
   font-family: "Montserrat";
 }
 
