--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,195 +1,199 @@
-.footer{  
-
-background-color: #24303E;
+.footer {
+  background-color: #02adb54d;
   color: #fff;
   padding-top: 80px;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
 }
-.footermenu1{
-    padding-left: unset;
-}
-.footermenu1 .footermenulinks{
-    font-family: 'Montserrat'; 
-    color: #fff;
-    font-weight: 400;
-    font-size: 13px;
-    list-style: none;
 
-
+.footermenu1 {
+  padding-left: unset;
 }
-.footerlogosize{
-    width:155px;
-    height:93px;
+.footermenu1 .footermenulinks {
+  font-family: "Montserrat";
+  color: #222;
+  font-weight: 500;
+  font-size: 13px;
+  list-style: none;
 }
-.socialiconfooter{
-    display: flex;
-    display: flex;
-    padding: 0;
-    margin-top: 35px;
-   
+.footer .footerlogosize {
+  width: 230px;
+  height: 90px;
+  filter: invert(0);
+}
+.socialiconfooter {
+  display: flex;
+  display: flex;
+  padding: 0;
+  margin-top: 35px;
 }
 
 .socialiconfooter .socaillinks {
-    list-style: none;
-    border: 1px solid white;
+  list-style: none;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  margin-right: 4%;
+}
+.awards {
+  text-align: center;
+}
+.imgvisa {
+  text-align: center;
+}
+
+.styleset {
+  color: #222;
+  text-decoration: none;
+}
+.rightlogo {
+  text-align: center;
+}
+
+.rightlogo img {
+  display: unset;
+}
+.imgvisa .rightlogo img {
+  display: unset;
+}
+
+.styleset:hover {
+  color: #2d2d2d;
+}
+
+.footerborder {
+  border-top: 1px solid #222;
+  padding-top: 1%;
+}
+
+.footerborder img {
+  width: 70%;
+}
+.imgvisa img {
+  width: 70%;
+}
+.imgsizes img {
+  width: 50%;
+  display: block;
+}
+.aligntextrignt {
+  text-align: right;
+}
+
+.footer p {
+  color: #222;
+}
+
+.footer img {
+  filter: invert(1);
+}
+
+.footer .pay {
+  filter: invert(0) !important;
+}
+
+.footer h2 {
+  color: #222;
+}
+
+.footer h2 {
+  border-bottom: 1px solid #222;
+  padding-bottom: 15px;
+}
+
+@media (max-width: 991px) {
+  .socialiconfooter .socaillinks {
+    width: 30px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    margin-right: 4%;
-}
-.awards{
-    text-align: center;
-}
-.imgvisa{
-    text-align: center;
-}
+    padding-left: 4px;
+  }
 
-.styleset{
-    color: #fff;
-    text-decoration: none;
-}
-.rightlogo{  text-align: center; }
-
-.rightlogo  img{
-    display: unset;
-}
-.imgvisa  .rightlogo img{
-    display: unset;
-}
-
-.styleset:hover{     color: #ddd; }
-
-
-.footerborder{
-    border-top: 1px solid white;
-    padding-top: 1%;
-}
-
-.footerborder img{
-    width: 70%;
-}
-.imgvisa img{
-    width: 70%;
-}
-.imgsizes img{
-    width: 50%;
-    display: block;
-}
-.aligntextrignt{
-    text-align: right;
-}
-
-@media (max-width:991px)  {
-
-
-    .socialiconfooter .socaillinks {
-       
-        width: 30px;
-        height: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding-left: 4px;
-    }
-
-
-.footermenu1 .footermenulinks {
-
+  .footermenu1 .footermenulinks {
     font-size: 10px;
+  }
 
-}
-
-.socialiconfooter .socaillinks {
+  .socialiconfooter .socaillinks {
     padding-right: 3px;
     list-style: none;
-}
-}
-
-@media (max-width:767px)  {
-    .aligntextrignt{
-        text-align: center;
-    }
-
-    .footer h2 {
-        margin-top: 12%;
-    }
-
-    .imgsizes img {
-        width: 25%;
-        display: block;
-       
-    }
-
-   .footerborder .t-right {
-        text-align: center;
-    }
-
-    .footerborder img {
-        width: 70%;
-        margin: 0 auto;
-        text-align: center;
-        display: block;
-        margin-bottom: 2%;
-    }
-    .awards {
-        text-align: left;
-    }
-    .rightlogo  {
-        text-align: left;
-    }
-
-    .footermenu1 .footermenulinks {
-        font-size: 16px;
-    }
-.footermenu1 {
-    padding-top: unset;
+  }
 }
 
-}
+@media (max-width: 767px) {
+  .aligntextrignt {
+    text-align: center;
+  }
 
-@media (max-width:480px)  {
+  .footer h2 {
+    margin-top: 12%;
+  }
 
+  .imgsizes img {
+    width: 25%;
+    display: block;
+  }
 
-    .socialiconfooter .socaillinks  {
-        width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-       
-    }
-    .footerborder{
-        padding-top: 7%;
-    }
-    .footerborder img{
-        padding-bottom: 5%;
-    }
+  .footerborder .t-right {
+    text-align: center;
+  }
 
+  .footerborder img {
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+    margin-bottom: 2%;
+  }
+  .awards {
+    text-align: left;
+  }
+  .rightlogo {
+    text-align: left;
+  }
 
-    
-.footermenu1 .footermenulinks {
+  .footermenu1 .footermenulinks {
     font-size: 16px;
+  }
+  .footermenu1 {
+    padding-top: unset;
+  }
 }
 
-.imgvisa .rightlogo img {
+@media (max-width: 480px) {
+  .socialiconfooter .socaillinks {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .footerborder {
+    padding-top: 7%;
+  }
+  .footerborder img {
+    padding-bottom: 5%;
+  }
+
+  .footermenu1 .footermenulinks {
+    font-size: 16px;
+  }
+
+  .imgvisa .rightlogo img {
     display: unset;
     padding: 5%;
-}
-.footer {
-   
+  }
+  .footer {
     padding-top: 60px;
     padding-bottom: 30px;
-  
-}
+  }
 
-.socialiconfooter .socaillinks{
-
+  .socialiconfooter .socaillinks {
     padding-right: unset;
     list-style: none;
-}
-
-
+  }
 }
