--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -61,13 +61,14 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 25px;
+  gap: 15px;
   height: 100%;
   margin-bottom: unset;
+  padding-left: 0;
 }
 
 .menulinks {
-  color: #fff;
+  color: #222;
   font-size: 16px;
   font-weight: 400;
   text-transform: capitalize;
@@ -92,7 +93,7 @@
   display: flex;
   align-items: center;
   border-radius: 50px;
-  background-color: #049ea5;
+  background-color: #223235;
   border: 0;
   color: #fff;
   font-family: "Montserrat";
@@ -100,7 +101,7 @@
 
 .headerbtnspacing {
   border: 2px solid #049ea5;
-  background-color: transparent;
+  background-color: #049ea5;
 }
 
 .headertel.headerbtnspacing:hover,
@@ -115,7 +116,7 @@
 }
 
 .navalign {
-  justify-content: flex-end;
+  justify-content: space-evenly;
 }
 
 .headertel:hover {
@@ -184,7 +185,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  background-color: #141d29;
+  background-color: #02adb54d;
 }
 .megamenu ul li a {
   font-size: 15px;
@@ -267,8 +268,8 @@
 }
 
 .logonew {
-  width: 115px;
-  height: 85px;
+  width: 135px;
+  height: 60px;
 }
 
 .menulinks:hover {
@@ -445,13 +446,13 @@
     position: unset;
     top: 0;
     width: 100%;
-    background-color: #141d29;
+    background-color: #02adb54d;
   }
   .headerblue {
     position: unset;
     top: 0;
     width: 100%;
-    background-color: #141d29;
+    background-color: #02adb54d;
   }
 
   .headerbtnspacing {
