--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -31,7 +31,7 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .signup1 {
-  background-color: #141d29;
+  background-color: #02adb54d;
   transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
   padding: 12px 40px 20px 40px;
   border: 2px solid #049ea5;
