--- a/src/styles/Whybookpublishing.module.css
+++ b/src/styles/Whybookpublishing.module.css
@@ -49,7 +49,7 @@
 }
 
 .stillbookwritingservices{
-    background-color: #141d29;
+    background-color: #02adb54d;
     padding-top: 100px;
     padding-bottom: 100px;
     counter-reset: section;
