--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -22,7 +22,7 @@
   font-family: "Montserrat";
 }
 .ghostwriting {
-  background-image: url(/images/bannerimages/ghost.jpg);
+  background-image: url(/images/bannerimages/ghost.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 140px;
@@ -248,7 +248,7 @@
   font-family: "Montserrat";
 }
 .digitalmarketingservices {
-  background-image: url(/images/bannerimages/digitalmarketingservices.jpg);
+  background-image: url(/images/bannerimages/bookmarketingservices.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 140px;
@@ -284,7 +284,7 @@
   font-family: "Montserrat";
 }
 .webcontentwritingservices {
-  background-image: url(/images/bannerimages/webcontentwritingservices.jpg);
+  background-image: url(/images/bannerimages/webcontentwritingservices.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 140px;
